Deep rewrite of Vector API, Linux Platform, and Serialization (batch 7)
by-topic/core/vector-api/index.md (697 → 968 lines):
- SIMD fundamentals: lane/width/element, why explicit API needed
- Type × shape matrix: 6 types × 4 widths
- Code examples: alpha blending, vectorized byte search
- C2 auto-vectorization comparison: when to use which
- Why still incubating: Valhalla value type dependency
- Platform support: x86 SSE/AVX, AArch64 NEON/SVE, RISC-V RVV

by-topic/platform/linux/index.md (528 → 885 lines):
- Container support: cgroup v1/v2, UseContainerSupport chain
- Signal handling: SIGSEGV→NPE, libjsig chaining
- Memory: mmap/madvise, HugeTLB vs THP, NUMA
- Threading: pthread 1:1, virtual thread epoll poller
- /proc interface: maps, status, NMT verification
- Alpine/musl (JEP 386): glibc vs musl, Dockerfile
- Perf tuning: kernel params, perf, bpftrace USDT probes

by-topic/concurrency/serialization/index.md (495 → 798 lines):
- Serialization internals: Unsafe.allocateInstance bypass
- Security: gadget chains, ysoserial, attack principles
- JEP 290: filter patterns, global/stream filters
- JEP 415: Filter Factory, context-specific filtering
- Records serialization: canonical constructor safety
- Alternatives: Jackson, Protobuf, comparison table
- Best practices: serialVersionUID, transient, readResolve

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>